<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.detail.DetailsNoteFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_180"
            android:layout_margin="@dimen/margin_main_16"
            app:cardCornerRadius="6dp"
            app:cardElevation="@dimen/card_elevation_redius_6"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="16dp">
        <ImageView
            android:id="@+id/image_note_detail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_180"
            android:src="@drawable/ic_photo"
             app:layout_constraintTop_toTopOf="parent"

            tools:layout_editor_absoluteX="16dp"/>
        </androidx.cardview.widget.CardView>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_detail_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tooltipText="Edit Note"
            android:layout_gravity="center_vertical|center_horizontal"
            android:src="@drawable/ic_edit"
            app:elevation="@dimen/card_elevation_redius_6"
            app:layout_constraintBottom_toTopOf="@+id/text_title_detail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        <TextView
            android:id="@+id/text_title_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_main_16"

            android:layout_marginStart="@dimen/margin_main_16"
            android:layout_marginTop="@dimen/margin_top_24"
            android:layout_marginEnd="@dimen/margin_main_16"
            android:hint="@string/title"

            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="@dimen/card_elevation_redius_6"
            app:boxCornerRadiusBottomStart="@dimen/card_elevation_redius_6"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView"/>


        <TextView
            android:id="@+id/text_desc_detail"
            android:padding="@dimen/margin_main_16"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_main_16"
            android:layout_marginTop="@dimen/margin_top_24"
            android:layout_marginEnd="@dimen/margin_main_16"
            android:hint="@string/description"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="@dimen/card_elevation_redius_6"
            app:boxCornerRadiusBottomStart="@dimen/card_elevation_redius_6"
            app:helperText="@string/helper_text_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_title_detail"/>

        <TextView
            android:id="@+id/categories_detail"
            android:padding="@dimen/margin_main_16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_main_16"
            android:layout_marginTop="@dimen/margin_top_24"
            android:layout_marginEnd="@dimen/margin_main_16"
            android:hint="Description"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="@dimen/card_elevation_redius_6"
            app:boxCornerRadiusBottomStart="@dimen/card_elevation_redius_6"
            app:helperText="you can enter more about note here"
            app:hintTextColor="@color/colorBlack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_desc_detail"/>



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>

